--- a/Intro_to_packages.ipynb
+++ b/Intro_to_packages.ipynb
@@ -196,21 +196,9 @@
       "execution_count": null,
       "id": "cfd7ebab-fcee-453d-9970-ac74eef39335",
       "metadata": {
-        "id": "cfd7ebab-fcee-453d-9970-ac74eef39335",
-        "outputId": "06b99744-cc70-4e28-9b48-d2d7d89443e5"
+        "id": "cfd7ebab-fcee-453d-9970-ac74eef39335"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "array([1, 2, 3, 4])"
-            ]
-          },
-          "execution_count": 14,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "#Here we're taking a simple list and turning it into a numpy array \n",
         "\n",
@@ -233,7 +221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "8f439182-3382-4c11-b83b-4b227d866550",
       "metadata": {
         "id": "8f439182-3382-4c11-b83b-4b227d866550"
@@ -442,7 +430,7 @@
         "id": "pYQjZa1arRAp"
       },
       "id": "pYQjZa1arRAp",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -952,7 +940,7 @@
       },
       "source": [
         "## Let's build a `DataFrame` now. \n",
-        "We're biological oceanographers collecting data on phytoplankton, those microscopic oragnisms responsible for 50% of the oxygen we breath. <br><br>\n",
+        "We're biological oceanographers collecting data on phytoplankton, those microscopic organisms responsible for 50% of the oxygen we breath. <br><br>\n",
         "<img src=\"https://media.giphy.com/media/2voMERSCQRqNqT2Kr3/giphy.gif\" width=\"400\" height=\"300\"> \n",
         "\n",
         "Phytoplankton contain chlorophyll to convert sunlight into food (like regular plants), so measuring the concentration of chlorophyll in the water serves as a proxy for phytoplankton concentrations, i.e. the higher the measured chlorophyll concentration, the more phytoplankton are present. Some phytoplankton create shells out of silicate in the water, so biogenic silica serves as an additional proxy. Phytoplankton require certain nutrients in the water, so nutrient concentrations are helpful to measure as well. <br>\n",
