--- a/Week3_Intro_to_packages.ipynb
+++ b/Week3_Intro_to_packages.ipynb
@@ -17,7 +17,7 @@
         "id": "c5a1ccab-a3dd-43ab-b3e8-7ad88bf8a0f2"
       },
       "source": [
-        "# **Week 3: Oceanography and Python Packages**\n",
+        "# **Week 3: Intro to Python Packages (and Oceanography!)**\n",
         "\n",
         "  Girls Who Code @ Columbia\n",
         "\n",
