Small typo fixes + capitalized all package names

--- a/Week3_Intro_to_packages.ipynb
+++ b/Week3_Intro_to_packages.ipynb
@@ -37,9 +37,9 @@
         "\n",
         "## Learning Objectives:\n",
         "* Learn about Python packages!\n",
-        "* Practice importing and using the NumPy, matplotlib, and pandas packages\n",
+        "* Practice importing and using the NumPy, Matplotlib, and Pandas packages\n",
         "* Import data files\n",
-        "* Manipulate data stored in numpy arrays and pandas dataframes"
+        "* Manipulate data stored in NumPy arrays and Pandas DataFrames"
       ],
       "metadata": {
         "id": "HkmUlzuAUkWr"
@@ -97,7 +97,7 @@
         "id": "8d4a803d-411e-4ffd-ae2e-c9bb3688b02d"
       },
       "source": [
-        "## Today we are going to learn about **software packages** in python and use them to work with some oceanographic data!\n",
+        "## Today we are going to learn about **software packages** in Python and use them to work with some oceanographic data!\n",
         "\n",
         "## But first, icebreaker time:"
       ]
@@ -163,9 +163,9 @@
       "source": [
         "## Python Packages\n",
         "\n",
-        "Python packages, also called \"libraries\", are software packages put together by the data analysis community to add additional functionality to python. In oceanography and many other analytical fields, we rely heavily on packages such as **NumPy**, **Matplotlib**, and **Pandas** for our data analysis. <br>\n",
+        "Python packages, also called \"libraries\", are software packages put together by the community to add additional functionality to Python. In oceanography and many other analytical fields, we rely heavily on packages such as **NumPy**, **Matplotlib**, and **Pandas** for our data analysis. <br>\n",
         "\n",
-        "You can think of packages like video game expansion packs or downloadable content (DLC). You have Python, which is the base game, and expansion backs/DLC that add additional functionality.\n"
+        "You can think of packages like video game expansion packs or downloadable content (DLC). You have Python, which is the base game, and expansion packs/DLC that add a bunch of new, helpful functions. \n"
       ]
     },
     {
@@ -222,7 +222,7 @@
         " \n",
         " What's an array? It's a row, column, or matrix of **data**. \n",
         " \n",
-        " Let's learn our first NumPy function and create an array:"
+        " Let's learn our first NumPy function and create an array by running the following cell:"
       ]
     },
     {
@@ -278,10 +278,10 @@
         "\n",
         "## Functions are accessed using dot notation. Inputs into the function go between the parentheses. \n",
         "\n",
-        "For example, if I want to use `np.min()` to find the minimum value of our example_array, I write: <br>\n",
+        "For example, if I want to use NumPy's function for finding the minimum value of an array, `np.min()`, I write: <br>\n",
         "    `np.min(example_array)` <br>\n",
         "\n",
-        "We are accessing the `.min()` function from the NumPy library using dot notation, and inputting `example_list`. <br><br>\n",
+        "We are accessing the `.min()` function from the NumPy library using dot notation, and inputting `example_array`. <br><br>\n",
         "Here are some basic numpy functions: <br>\n",
         "* `np.min()` - calculates the minimum of an array <br>\n",
         "* `np.max()` - calculates the max <br>\n",
@@ -308,7 +308,7 @@
         "id": "41854f89-d8a9-4afa-ad9e-2b95672a09e9"
       },
       "source": [
-        "Do you see why we use \"np\" to call NumPy? It's easier to type out `np` each time than the full name of the package (numpy), and we're all about efficiency in coding!"
+        "Do you see why we use \"np\" to call NumPy? It's easier to type out `np` each time than the full name of the package (NumPy), and we're all about efficiency in coding!"
       ]
     },
     {
@@ -396,7 +396,7 @@
         "id": "b7478f41-89da-491e-b513-5d8ad27476e5"
       },
       "source": [
-        "Make a list containing four numbers (call it anything you want), use np.array() to make it into an `ndarray`, then multiply our example_array by your new array."
+        "Make a list containing four numbers (call it anything you want), use `np.array()` to make it into an `ndarray`, then multiply our example_array by your new array."
       ]
     },
     {
@@ -593,10 +593,10 @@
       "source": [
         "## This is just the tip of the iceberg with NumPy - it is a powerful tool. \n",
         "But with the basic functions you've learned here, you can already do some cool things. Let's recap: <br><br>\n",
-        "* `np.array()` - creates an ndarray from an input object <br>\n",
+        "* `np.array()` - creates an `ndarray` from an input object <br>\n",
         "* `np.min()` - calculates the minimum of an array <br>\n",
         "* `np.max()` - calculates the max <br>\n",
-        "* `np.mean()` - calculate the mean value <br>\n",
+        "* `np.mean()` - calculate the mean  <br>\n",
         "* `np.median()` - calculate the median <br>\n",
         "* `np.pi` - returns the value of Pi <br>\n",
         "* `np.linspace()` - creates an array of evenly spaced numbers in a specified range containing a specified number of entries <br>\n",
@@ -724,7 +724,7 @@
         "id": "a9a9e068-eee5-45a9-b40b-c155e5db3ecf"
       },
       "source": [
-        "Here each number in example_matrix is represented by a different color."
+        "Here, each number in example_matrix is represented by a different color."
       ]
     },
     {
@@ -735,7 +735,7 @@
       },
       "source": [
         "## Let's try plotting some real data\n",
-        "These temperature data were collected by lowering a suite of scientific sensors into the water at a fixed location. As the sensors sunk, they recorded depth (calculated from pressure) and temperature.  Often these sensors are attached to a metal frame that also contains water bottles for water sample collection. <br>\n",
+        "These temperature data were collected by lowering a suite of scientific sensors into the water at a fixed location. As the sensors sunk, they recorded depth (calculated from pressure) and temperature.  Often these kinds of sensors are attached to a metal frame that also contains water bottles for water sample collection. <br>\n",
         "\n",
         "<img src=\"https://schmidtocean.org/wp-content/uploads/ctdreleasedjustundersurface11-18-14markheckman-1140x855.jpg\" width=\"400\" height=\"300\"> <br>\n",
         "<sup><sub>This is called a conductivity, temperature, depth (CTD) rosette (<a href=\"https://schmidtocean.org/cruise-log-post/using-the-ctd-to-calibrate-the-multibeam-sonar/\">Source</a>)</sub></sup>\n"
@@ -799,18 +799,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "# your answer here\n"
-      ],
-      "metadata": {
-        "id": "j8kiuD1JXZL7"
-      },
-      "id": "j8kiuD1JXZL7",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "id": "8c43841b-f234-4975-9598-1c15d3b6064c",
       "metadata": {
@@ -857,7 +845,7 @@
       },
       "outputs": [],
       "source": [
-        "#go ahead and import pandas\n"
+        "#go ahead and import Pandas\n"
       ]
     },
     {
@@ -867,7 +855,7 @@
         "id": "5c5e83de-ef69-493f-9676-f034628402d5"
       },
       "source": [
-        "Before we work with any data, let's learn about the fundamental objects in pandas, `Series` and `DataFrame`. <br>\n",
+        "Before we work with any data, let's learn about the fundamental objects in Pandas, `Series` and `DataFrame`. <br>\n",
         "A `Series` is like our good friend `ndarray` from NumPy but with a key difference:"
       ]
     },
@@ -893,7 +881,7 @@
       },
       "outputs": [],
       "source": [
-        "#run this to create a brand new pandas Series\n",
+        "#run this to create a brand new Pandas Series\n",
         "pd.Series([1,2,3,4])"
       ]
     },
@@ -964,7 +952,7 @@
       },
       "outputs": [],
       "source": [
-        "# Try indexing for 'Birds'\n",
+        "# Try indexing for 'Birds' using both .loc[] and .iloc[]\n",
         "\n",
         "\n"
       ]
@@ -1511,7 +1499,7 @@
         "id": "e5eed9c1-5186-4ed9-b8a9-64e576a06611"
       },
       "source": [
-        "Add a y axis label to the above plot using the `.ylabel()` function we learned before."
+        "Try adding a y axis label to the above plot using the `.ylabel()` function we learned before."
       ]
     },
     {
