--- a/Week2_Objects_Booleans_Statements.ipynb
+++ b/Week2_Objects_Booleans_Statements.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/CU-GWC-Data-Science/classes/blob/main/Week2_Objects_Booleans_Statements.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cu-gwc-datascience/classes/blob/main/Week2_Objects_Booleans_Statements.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -741,6 +741,9 @@
         "* to subtract, use `-`\n",
         "* to multiply, use `*`\n",
         "* to divide, use `/`\n",
+        "* to use an exponent, use `**`\n",
+        "    * to raise x to the power of 2, you can do: `x**2`\n",
+        "    * to take the square root of x, you can do: `x**(1/2)`\n",
         "* brackets can be used to infer the order of operations\n",
         "\n"
       ]
