--- a/Week5_Geographic_DataVisualization.ipynb
+++ b/Week5_Geographic_DataVisualization.ipynb
@@ -372,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "fH4DQZPtvHgi"
       },
@@ -381,7 +381,7 @@
         "import netCDF4 as nc\n",
         "\n",
         "# read in the netCDF data\n",
-        "dataset = nc.Dataset('./LGMR_SST_climo.nc')"
+        "dataset = nc.Dataset('LGMR_SST_climo.nc')"
       ]
     },
     {
